2008-08-06  Soren Hauberg  <hauberg@gmail.com>

	* error.cc (Ferror): Update format of error messages in exmple.
	* parse.y: (Feval): Likewise.

2008-08-06  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fsolve.cc (hybrd_info_to_fsolve_info):
	Update INFO values to be compatible with Matlab's current fsolve.
	(make_unimplemented_options, override_options): New functions.
	(Ffsolve): Handle optimset options.  Update doc string.

	* ov-usr-fcn.cc (octave_user_function::do_multi_index_op,
	octave_user_script::do_multi_index_op):
	Call octave_call_stack::backtrace_error_message.
	* toplev.h (octave_call_stack::do_pop): Don't call
	backtrace_error_message here.
	* toplev.cc, toplev.h (octave_call_stack::do_backtrace_error_message):
	Rename from octave_call_stack::backtrace_error_message.
	* toplev.h (octave_call_stack::backtrace_error_message):
	New public static function. 

2008-08-05  John W. Eaton  <jwe@octave.org>

	* gripes.cc (gripe_truncated_conversion,
	gripe_logical_conversion): Don't declare as extern here.
	* utils.cc (octave_format, octave_vformat): Likewise.
	* pr-output.cc (octave_print_internal (std::ostream&, const Cell&,
	bool, int, bool)): Likewise.

	* toplev.cc (octave_call_stack::backtrace_error_message): New
	function.
	* toplev.h: Provide decl.
	(octave_call_stack::do_pop): Call backtrace_error_message if
	error_state is nonzero.

	* pt-unop.cc (tree_prefix_expression::eval_error, 
	tree_postfix_expression::eval_error): Delete.  Eliminate all uses.
	* pt-unop.h: Delete decls.

	* pt-select.cc (tree_switch_case::eval_error,
	tree_switch_command::eval_error): Delete.  Eliminate all uses.
	(tree_if_command::eval): Omit "evaluating if command" message.
	* pt-select.h: Delete decls.

	* pt-loop.cc (tree_while_command::eval_error,
	tree_complex_for_command::eval_error,
	tree_simple_for_command::eval_error,
	tree_do_until_command::eval_error): Delete.  Eliminate all uses.
	* pt-loop.h: Delete decls.
